refactor: add endpoint versioning
